@@ -3,6 +3,7 @@ version 2.1
 - hierarchical color palettes method slightly improved
 - recover interactive functions tmClick and tmLocate. These functions are useful to identify small rectangles in large treemaps
 - add version number of required data.table package to prevent conflicts
+- line thickness (lwds) added as parameter to adjust line thickness at variaous agggregation levels
 
 version 2.0.1
 - computation time examples shorter (CRAN policy)
